# markdown-math-solver

./: .gitignore  README.md  USAGE.md  pyproject.toml
.github/workflows/: workflow.yml
example/: entropy.md  entropy.output.md
src/markdown_math_solver/: __init__.py  __main__.py  cli.py  solver.py
src/markdown_math_solver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_solver.py
