[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-math-solver"
version = "1.0.0"
description = "Process Python code embedded in LaTeX math blocks in Markdown files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["markdown", "latex", "katex", "math", "solver", "sympy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "sympy>=1.12",
    "antlr4-python3-runtime==4.11",
]

[project.scripts]
markdown-math-solver = "markdown_math_solver.cli:main"

[project.urls]
Homepage = "https://github.com/abdxdev/markdown-math-solver"
Issues = "https://github.com/abdxdev/markdown-math-solver/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
